i put contact info in to class, changed social media and info links. radius adjusted sa image_2

--- a/index.html
+++ b/index.html
@@ -99,22 +99,43 @@
 
     <section id="contact">
         <div class="container">
-            <h2>Contact Us</h2>
-            <p>If you have any questions, feel free to reach out. We're here to help!</p>
 
+            <div class="contact-header">
+                <h2>Contact Us</h2>
+                <p>If you have any questions, feel free to reach out. I'm here to help!</p>
+            </div>
+            
             <div class="contact-info">
                 <div class="info-item">
-                    <h3>Address</h3>
-                    <p>1234 Elm Street<br>City, State, 56789</p>
+                    <div class="a-info-item-address">
+                        <h3>Address</h3>    
+                    </div>
+
+                    <div class="a-info-item-address-label">
+                        <p>Galas<br>Quezon City, Metro Manila</p>    
+                    </div>
                 </div>
+
                 <div class="info-item">
-                    <h3>Phone</h3>
-                    <p><a href="tel:+1234567890">+1 (234) 567-890</a></p>
+                    <div class="b-info-item-phone">
+                        <h3>Phone</h3>
+                    </div>
+
+                    <div class="b-info-item-number">
+                        <p><a href="tel:09984287184">+63 (998)-428-7184</a></p>
+                    </div>
                 </div>
+
                 <div class="info-item">
-                    <h3>Email</h3>
-                    <p><a href="mailto:info@example.com">info@example.com</a></p>
+                    <div class="c-info-item-email">
+                        <h3>Email</h3>
+                    </div>
+
+                    <div class="c-info-item-email-address">
+                        <p><a href="mailto:REYES.CLARIZZA@UE.EDU.PH">REYES.CLARIZZA@UE.EDU.PH</a></p>
+                    </div>
                 </div>
+                
             </div>
 
             <div class="contact-form">
@@ -142,9 +163,9 @@
 
             <div class="social-media">
                 <h3>Follow Us</h3>
-                <a href="https://facebook.com" target="_blank">Facebook</a>
-                <a href="https://twitter.com" target="_blank">Twitter</a>
-                <a href="https://linkedin.com" target="_blank">LinkedIn</a>
+                <a href="http://m.me/klareizuhh?hash=AbZtbieHED2erbUW&source_id=6946816" target="_blank">Messenger</a>
+                <a href="https://github.com/miiikunnn" target="_blank">Instagram</a>
+                <a href="https://github.com/clrzzR" target="_blank">Github</a>
             </div>
         </div>
     </section>
@@ -152,6 +173,6 @@
 
     <footer>
         <p>&copy; 2024 Clarizza Reyes</p>
-    </footer>
+    </footer>   
 </body>
 </html>
