--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         <label for="email">Email</label>
                         <input type="email" id="email" name="email" required>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group" >
                         <label for="subject">Subject</label>
                         <input type="text" id="subject" name="subject">
                     </div>
@@ -162,7 +162,7 @@
             </div>
 
             <div class="social-media">
-                <h3>Follow Us</h3>
+                <h3>Follow Me</h3>
                 <a href="http://m.me/klareizuhh?hash=AbZtbieHED2erbUW&source_id=6946816" target="_blank">Messenger</a>
                 <a href="https://github.com/miiikunnn" target="_blank">Instagram</a>
                 <a href="https://github.com/clrzzR" target="_blank">Github</a>
