--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <div class="container">
 
             <div class="contact-header">
-                <h2>Contact Us</h2>
+                <h2>Contact Me</h2>
                 <p>If you have any questions, feel free to reach out. I'm here to help!</p>
             </div>
             
